# PolyUCLS

./: .gitignore  CMakeLists.txt  README.md
apps/: benchmark_noise_sweep.cpp  example_procrustes.cpp  example_stiefel.cpp  example_unitnorm.cpp
include/guc_ls/: polynomial.hpp  procrustes.hpp  roots.hpp  stiefel_ls.hpp  unit_norm_ls.hpp
matlab/: guc_ls_boxplot.m
src/: procrustes.cpp  roots.cpp  stiefel_ls.cpp  unit_norm_ls.cpp
